Added a classification dataset creator from networks and a classification dataset

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,9 @@ target_link_libraries(executables/pbdnnTesting Machines TinyXML ${OpenCV_LIBS} $
 add_executable(executables/createPixelDB src/executables/createPixelDB.cpp)
 target_link_libraries(executables/createPixelDB Machines TinyXML ${OpenCV_LIBS} ${Boost_LIBS})
 
+add_executable(executables/createRegressionPixelRimes src/executables/createRegressionPixelRimes.cpp)
+target_link_libraries(executables/createRegressionPixelRimes Machines TinyXML ${OpenCV_LIBS} ${Boost_LIBS})
+
 add_executable(executables/pbdnnIAM src/executables/pbdnnIAM.cpp)
 target_link_libraries(executables/pbdnnIAM Machines TinyXML ${OpenCV_LIBS} ${Boost_LIBRARIES} ${Threads_LIBS})
 
@@ -71,8 +74,8 @@ target_link_libraries(executables/createImagesFromDB Machines TinyXML ${OpenCV_L
 add_executable(executables/createPixelRimes src/executables/createPixelRimes.cpp)
 target_link_libraries(executables/createPixelRimes Machines TinyXML ${OpenCV_LIBS} ${Boost_LIBRARIES} ${Threads_LIBS})
 
-add_executable(executables/createRegressionPixelRimes src/executables/createRegressionPixelRimes.cpp)
-target_link_libraries(executables/createRegressionPixelRimes Machines TinyXML ${OpenCV_LIBS} ${Boost_LIBRARIES} ${Threads_LIBS})
+add_executable(executables/createClassificationRimesNetworks src/executables/createClassificationRimesNetworks.cpp)
+target_link_libraries(executables/createClassificationRimesNetworks Machines TinyXML ${OpenCV_LIBS} ${Boost_LIBRARIES} ${Threads_LIBS})
 
 add_executable(executables/testRNN src/executables/recurrentLearning.cpp)
 target_link_libraries(executables/testRNN Machines TinyXML ${OpenCV_LIBS} ${Boost_LIBRARIES} ${Threads_LIBS})
